# peak-fit-gui

./: .gitignore  README.md  dummy_data.csv  environment.yml  model.py  peak_fit_gui.py  pyproject.toml  settings.cfg  view.py
peak_fit_gui/: __main__.py  controller.py  default_config.py
