[tool.poetry]
name = "peak-fit-gui"
version = "2.1.0"
description = ""
authors = ["Moritz Kluwe <Moritz-Niklas.Kluwe@imfd.tu-freiberg.de>"]
readme = "README.md"
packages = [{include = "peak_fit_gui"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
tomli = "^2.0.1"
pathlib = "^1.0.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
